test/box/net_sql.pg.result
lua c = box.net.sql.connect('abcd')
---
error: '[string "-- sql.lua (internal file)..."]:61: Unknown driver ''abcd'''
...
lua dump = function(v) return box.cjson.encode(v) end
---
...
lua connect = {}
---
...
lua for tk in string.gmatch(os.getenv('PG'), '[^:]+') do table.insert(connect, tk) end
---
...
lua c = box.net.sql.connect('pg', unpack(connect))
---
...
lua dump({c:execute('SELECT 123::text AS bla, 345')})
---
 - [[{"?column?":345,"bla":"123"}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT -1 AS neg, NULL AS abc')})
---
 - [[{"neg":-1}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT -1.1 AS neg, 1.2 AS pos')})
---
 - [[{"neg":-1.1,"pos":1.2}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ARRAY[1,2] AS neg, 1.2 AS pos')})
---
 - [[{"neg":"{1,2}","pos":1.2}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ? AS val', 'abc')})
---
 - [[{"val":"abc"}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ? AS val', 123)})
---
 - [[{"val":123}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ? AS val', true)})
---
 - [[{"val":true}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ? AS val', false)})
---
 - [[{"val":false}],1,"SELECT 1"]
...
lua dump({c:execute('SELECT ? AS val, ? AS num, ? AS str', false, 123, 'abc')})
---
 - [[{"str":"abc","num":123,"val":false}],1,"SELECT 1"]
...
lua dump({c:execute('DROP TABLE IF EXISTS unknown_table')})
---
 - [{},0,"DROP TABLE"]
...
lua dump({c:execute('SELECT * FROM (VALUES (1,2), (2,3)) t')})
---
 - [[{"column1":1,"column2":2},{"column1":2,"column2":3}],2,"SELECT 2"]
...
lua c:ping()
---
 - true
...
lua dump({c:select('SELECT * FROM (VALUES (1,2), (2,3)) t')})
---
 - [[{"column1":1,"column2":2},{"column1":2,"column2":3}]]
...
lua dump({c:single('SELECT * FROM (VALUES (1,2), (2,3)) t')})
---
error: '[string "-- sql.lua (internal file)..."]:154: SQL request returned multiply rows'
...
lua dump({c:single('SELECT * FROM (VALUES (1,2)) t')})
---
 - [{"column1":1,"column2":2}]
...
lua dump({c:perform('SELECT * FROM (VALUES (1,2), (2,3)) t')})
---
 - [2]
...
lua c:execute('SELEC T')
---
error: '[string "-- sql.lua (internal file)..."]:102: ERROR:  syntax error at or near "SELEC"
LINE 1: SELEC T
        ^
'
...
lua c = box.net.sql.connect('abcd')
---
error: '[string "-- sql.lua (internal file)..."]:61: Unknown driver ''abcd'''
...
lua c:quote('abc"cde"def')
---
 - 'abc"cde"def'
...
